# dry2-iaas

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: app-build-deploy.yaml  app-deploy.yml  run-migrations.yaml  terraform-apply.yaml  terraform-apply.yml  terraform-plan.yaml  terraform-plan.yml
cli/: pyproject.toml  requirements.txt  setup.py
cli/dry2/: cli.py
cli/dry2/commands/: __init__.py  deploy.py  env.py  init.py
cli/dry2/templates/terraform/: outputs.tf.j2
cli/dry2/utils/: __init__.py  config.py  github.py  templates.py
dry2/: __init__.py  cli.py
dry2/commands/: deploy.py  destroy.py  env.py  init.py  status.py
dry2/templates/github/: deploy.yml.j2
dry2/templates/terraform/: main.tf.j2  terraform.tfvars.j2  variables.tf.j2
dry2/utils/: config.py  templates.py  terraform.py
helm/django-app/: Chart.yaml  values-dev.yaml  values-production.yaml  values-staging.yaml  values.yaml
helm/django-app/templates/: _helpers.tpl  configmap.yaml  cronjob.yaml  deployment.yaml  hpa.yaml  ingress.yaml  pdb.yaml  secret.yaml  service.yaml  serviceaccount.yaml  worker-deployment.yaml  worker-hpa.yaml
helm/observability/: elastic-stack-values.yaml  sentry-values.yaml
terraform/environments/dev/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
terraform/environments/production/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
terraform/environments/staging/: main.tf  terraform.tfvars.example  variables.tf
terraform/shared/: outputs.tf  variables.tf
(+12 files in other folders)
